force-app/main/default/objects/custom_create169__c/custom_create169__c.object-meta.xml
<CustomObject>
    <label>Custom created object169</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects169</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>