force-app/main/default/objects/custom_create169__c/fields/custom_create_169field544__c.field-meta.xml
<CustomField>
    <fullName>custom_create_169field544__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 169field544</label>
    <type>Checkbox</type>
</CustomField>